<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.register.viewModel.AuthViewModel" />
    </data>



<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue"
    tools:context=".PinFragment">

    <TextView
        android:id="@+id/pin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_pin"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        android:hint="@string/set_my_pin"
        app:counterMaxLength="4"
        app:layout_constraintTop_toBottomOf="@id/pin_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/set_your_pin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="4"
            android:inputType="number"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_pin"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        app:endIconMode="password_toggle"
        android:textColorHint="@color/white"
        android:hint="@string/confirm_pin"
        app:layout_constraintTop_toBottomOf="@id/pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_your_pin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLength="4"
            android:inputType="number"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="Submit"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_pin" />


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>